--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -15,7 +15,6 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
-    "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "framer-motion": "^7.6.5",
     "next": "13.0.2",
@@ -28,7 +27,11 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.27.0",
+    "eslint-plugin-react": "^7.31.10",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.2"
   },
